# streamlit-fastapi-img-system

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.streamlit/: config.toml
api/: app.py  start-fastapi.cmd
datafile/: sample_data.csv
fastapi/: api.py  start-fastapi.cmd
plumber/: api.R  config.R  start-plumber.cmd
plumber/renv/: start.R
