[tool.poetry]
name = "streamlit-tutorial"
version = "0.1.0"
description = ""
authors = ["'Myxogastria0808' <r.rstudio.c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
requests = "^2.31.0"
pandas = "^2.2.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standards"], version = "^0.27.1"}
python-multipart = "^0.0.9"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
